--- a/package.json
+++ b/package.json
@@ -3,27 +3,36 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 5000",
+    "dev": "next dev -p 5000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@fontsource/inter": "^5.1.0",
-    "@fontsource/poppins": "^5.1.0",
-    "@fontsource/work-sans": "^5.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.2",
+    "@tabler/icons-react": "^3.26.0",
     "alabura.com": "file:",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
+    "framer-motion": "^11.14.4",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.468.0",
+    "nanoid": "^5.0.9",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.83.0"
+    "react-hot-toast": "^2.4.1",
+    "react-spring": "^9.7.5",
+    "sass": "^1.83.0",
+    "tailwind-merge": "^2.5.5",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.1.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
