--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "framer-motion": "^11.14.4",
+    "lenis": "^1.1.18",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "motion": "^11.15.0",
