--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/bricolage-grotesque": "^5.1.1",
+    "@fontsource/inter": "^5.1.1",
+    "@fontsource/poppins": "^5.1.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-navigation-menu": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
@@ -42,6 +45,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
