--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 5000",
+    "dev": "next dev -p 5050",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev:clean": "pnpm clear-cache && pnpm dev",
+    "clear-cache": "rimraf .next .cache",
+    "format": "prettier --write \"**/*.{ts,tsx,scss,mdx,md}\""
   },
   "dependencies": {
     "@fontsource/bricolage-grotesque": "^5.1.1",
@@ -50,6 +53,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
+    "prettier": "^3.5.1",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
